--- a/src/index.css
+++ b/src/index.css
@@ -1,98 +1,4 @@
-/* body {
-  background-color: rgb(159, 131, 228);
-}
-
-.whole, .TodoForm, .todoInput, .todo-button {
-  text-align: center;
-  margin-top: 10px;
-  font-family: 'Courier New', Courier, monospace;
-  
-}
-
-.TodoForm, .todoInput, .todo-button {
-  padding:10px ;
-  margin-bottom: 10px;
-}
-
-.listItem {
-  color: black;
-  margin-right: 160px;
-}
-
-.icons {
-  
-  
-  margin-bottom: px;
-  color: white;
-  margin-left: 450px;
-  margin-top: -45px;
-  
-  /* align-items: flex-start; */
-  
-
-  
-  
-  
-/* } */
-
-/* .icon2 {
-  margin-left: 50px;
-  height: 25px; */
-
-  
-/* } */
-/* 
-.icon1{
-  
-  height: 25px;
-  
- 
-  
-  
-} */
-
-
-/* 
-.listItem {
-  display: flex;
-  color: white;
-  
-  padding-left: 20px; 
-  
-  margin-bottom: 30px
-}
-
-.Todo { */
-/*   
-  background-color: rgb(159, 131, 228);
-  max-width: 600px;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 17px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 10px;
-  max-height: 50px;
-  
-  
-} */
-
-/* 
-
-.TodoForm{
- text-align: center
- 
-}
-
-.TodoWrapper{
-  background-color: rgb(24, 18, 67);
-  padding-bottom: 40px;
-}
-
-.AppTitle{
-  color: white;
-  padding-top: 30px;
-} */ */
+ */
 
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap'); */
 
